<resources>
    <string name="app_name">FoodTruck</string>
    <string name="pizzen_menu">Menù Pizza</string>
    <string name="ingredient_menu">Menù Ingredienti</string>
    <string name="getranke_menu">Menù Bevande</string>
    <string name="admin_pizzen">Gestione Pizze</string>
    <string name="admin_zutaten">Gestione Ingredienti</string>
    <string name="admin_getranke">Gestione Bevande</string>
    <string name="ja">Sì</string>
    <string name="nein">No</string>
    <string name="close_admin_menu_text">Premere due volte per aprire rapidamente il menu Manager</string>
    <string name="er_bestätigt">Conferma</string>
    <string name="zutaten_text">Inserisci l\'ingrediente</string>
    <string name="ingredient_dialog_text">Vuoi inserire gli ingredienti del giorno?</string>
    <string name="ingredient_dialog_confirm_text">Sei sicuro di non voler aggiungere gli ingredienti del giorno?</string>
    <string name="geben_sie_den_namen">Inserisci il nome dell\'ingrediente</string>
    <string name="geben_sie_den_preis">Inserisci il prezzo dell\'ingrediente</string>
    <string name="endet">Finito</string>
    <string name="endet_zutaten_fragment">Non hai inserito nessun ingrediente, vuoi continuare?</string>
    <string name="rückwärts">Indietro</string>
    <string name="zutaten_header">Il prezzo base per l\'impasto della pizza è di 6 €</string>
    <string name="zutaten_order_text">Hai aggiunto %1$s alla pizza</string>
    <string name="zutaten_erase_order_Text">Hai cancellato tutti gli ingredienti</string>
    <string name="zutaten_remove_text">Hai rimosso %1$s dalla pizza</string>
    <string name="element_not_in_order_text">L\'articolo %1$s non è presente nel tuo ordine</string>
    <string name="confirm_order">Sei sicuro di voler completare l\'ordine?</string>
    <string name="complete_order">Sei sicuro di voler confermare l\'ordine?</string>
    <string name="insert_name">Vuoi inserire il tuo nome?</string>
    <string name="insert_name_hint">Inserisci il tuo nome</string>
    <string name="admin_menu">Gestione</string>
    <string name="kiosk_menu">Chiosco</string>
    <string name="order_name_missing">Inserisci un nome per l\'ordine</string>
    <string name="day_total">Totale del giorno</string>
    <string name="historical_total">Storia complessiva</string>
    <string name="total_day_text">Totale della giornata: %1$s €</string>
    <string name="total_month_text">Totale del mese: %1$s €</string>
    <string name="enterprise_data_string">Pizza da Thumb80©</string>
    <string name="total_pdf_string">Totale : %1$s €</string>
    <string name="order_number">Numero dell\'ordine %1$s</string>
    <string name="select_modality">Scegli la modalità</string>
    <string name="insert_name_text">Inserisci il nome del prodotto</string>
    <string name="insert_price_text">Inserisci il prezzo del prodotto</string>
    <string name="day_total_text">Il totale della giornata è %1$s €</string>
    <string name="day_total_text_off">Oggi non c\'è stato incassso</string>
    <string name="empty_order">Il tuo ordine è vuoto</string>
    <string name="zutaten_already_inserted">Hai già inserito l\'ingrediente</string>
    <string name="printer_connected">Connesso alla stampante %1$s</string>
    <string name="printer_not_connected">Non collegato alla stampante</string>
    <string name="company">Powered by Thumb80®</string>
    <string name="pizzen_count_text">Totale : %1$s Pizze</string>
    <string name="company_owner">Pizza da Thumb80</string>
    <string name="printer_disconnected">Attenzione!! Stampante disconnessa</string>
    <string name="reconnnect_printer">Ricollegare la stampante</string>
    <string name="order_total">%1$s - €</string>
    <string name="order_owner_text">Nome del cliente : %1$s</string>
    <string name="order_text_number">Numero dell\'ordine : %1$s</string>
    <string name="start_kiosk_mode"><u>Avvia la modalità chiosco</u></string>
    <string name="noch_eine_pizza">Un\'altra pizza</string>
    <string name="inner_dialog_text">Vuoi inserire il tuo nome?</string>
    <string name="reconnect_dialog_text">Attenzione! Stampante non connessa, riconnettersi</string>
    <string name="zutaten_threshold">Scegli almeno due ingredienti</string>
    <string name="menu_empty">Menù vuoto</string>
</resources>