<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/pdf_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="346.456dp"
    android:layout_height="match_parent"
    android:padding="12dp"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_text_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_4"
        tools:text="@string/historical_total"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_text_pdf_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/order_text_pdf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/sp_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/order_number_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48px"
        android:textSize="@dimen/sp_6"
        android:gravity="center"
        android:text="@string/order_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_text_pdf_container"
        app:layout_constraintBottom_toTopOf="@id/total_text_pdf"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_text_pdf"
        android:layout_width="wrap_content"
        android:layout_height="42px"
        android:textStyle="bold"
        android:text="@string/total_pdf_string"
        android:textSize="@dimen/sp_8"
        android:layout_marginRight="2px"
        android:layout_marginBottom="48px"
        app:layout_constraintTop_toBottomOf="@+id/order_number_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>